<resources>
    <string name="app_name">Shadrack Media Player</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Browse files</string>
    <string name="more">more</string>
    <string name="playlist">playlist</string>
    <string name="video">video</string>
    <string name="browse">browse</string>
    <string name="audio">audio</string>
</resources>