<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_action_video"
        android:title="@string/video"/>

    <item
        android:id="@+id/navigation_audio"
        android:icon="@drawable/ic_action_audio"
        android:title="@string/audio"/>

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_action_browse"
        android:title="@string/browse"/>

    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/ic_action_playlist"
        android:title="@string/playlist"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_action_more"
        android:title="@string/more"/>

</menu>